...
import com.demo.minnies.shared.presentation.components.OptionsBox
import com.demo.minnies.shared.presentation.components.SwitchBox
import com.demo.minnies.shared.presentation.ui.MinniesTheme
import com.demo.minnies.shared.presentation.ui.PAGE_HORIZONTAL_MARGIN
import com.demo.minnies.shared.utils.Currency

const val LOGOUT_BUTTON_TEST_TAG = "LOGOUT_BUTTON_TEST_TAG"
const val ACCOUNT_BUTTON_TEST_TAG = "ACCOUNT_BUTTON_TEST_TAG"

@Composable
fun More(gotoAccountScreen: () -> Unit) {

    val viewModel = hiltViewModel<MoreScreenViewModel>()
    val isLoggedIn = viewModel.isLoggedIn.collectAsState(true).value
...
