...
            horizontalArrangement = Arrangement.Start
        ) {

            if (showNavigationIcon) {
                Image(
                    imageVector = navigationButtonIcon,
                    contentDescription = "back button",
                    colorFilter = ColorFilter.tint(color = MaterialTheme.colorScheme.tertiary),
                    modifier = Modifier
                        .wrapContentSize()
                        .clip(CircleShape)
                        .clickable(
                            indication = rememberRipple(
...
