...
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import com.demo.minnies.shared.presentation.components.MinniesDefaultButton
import com.demo.minnies.shared.presentation.ui.MinniesTheme
import com.demo.minnies.shared.presentation.ui.PAGE_HORIZONTAL_MARGIN

const val SHIPPING_ADDRESS_TEXT_FIELD_TEST_TAG = "SHIPPING_ADDRESS_TEXT_FIELD_TEST_TAG"
const val SUBMIT_BUTTON_TEST_TAG = "SUBMIT_BUTTON_TEST_TAG"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun UpdateShippingAddress(
    currentAddress: String,
    updateAction: (String) -> Unit,
...
